tests/snapshots/python_parity_unit_snapshots__dropin_10_memory.snap
---
source: tests/python_parity_unit_snapshots.rs
expression: "dropin(&r.drop_ins, \"10-memory.conf\")"
---
[Service]
MemoryMax=110G
